fix: remove misaligned spacing of flash messages

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -69,3 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 #winrepo-logo > img {
 	height: 38px;
 }
+
+.messages {
+	padding: 0;
+}
